# rbf_childrens_night_2023

./: README.md  entrypoint.py  game_state.py  input_handler.py  pyproject.toml
arduino/: clock.cpp  game.ino  score.cpp
frontend/: bun.lockb  package.json
frontend/src/routes/: +page.svelte  score.svelte  socket.svelte  title.svelte
static/css/: style.css
templates/: home.html
